# google-mcp-server

./: .gitignore  README.md  cache_helpers.py  docker-compose.yaml  gemini_agent.py  gemini_agent_2.py  google_suite_cache_server.py  google_suite_http_server.py  google_suite_server.py  mcp_endpoints.json  pyproject.toml  requirements.txt  test_client.py  test_http_client_stream.py
